fix for dark mode

--- a/scss/modes/modes.scss
+++ b/scss/modes/modes.scss
@@ -1,5 +1,5 @@
 $modes: (
-  dark: (
+  gra-dark: (
     transparentColor: $transparent,
     colorMain: $color-main-dt,
     colorSecondary: $color-secondary-dt,
